// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingButton renders correctly 1`] = `
.c0 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.90;
}

.c0:focus {
  outline: none;
}

.c0:active {
  opacity: 0.80;
}

.c0:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c1 {
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

<button
  className="c0 c1"
  onClick={[MockFunction]}
/>
`;

exports[`LoadingButton shows loading indicator 1`] = `
.c0 {
  max-height: 50px;
  padding: 12px;
  border: none;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c0:hover {
  opacity: 0.90;
}

.c0:focus {
  outline: none;
}

.c0:active {
  opacity: 0.80;
}

.c0:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c2 {
  -webkit-animation: fvtopB 1.5s infinite linear;
  animation: fvtopB 1.5s infinite linear;
}

.c1 {
  width: 100%;
  height: 50px;
  margin: auto;
  display: block;
}

<button
  className="c0 c1"
  onClick={[MockFunction]}
>
  <i
    className="c2 fas fa-spinner"
  />
</button>
`;
